# drogue-bazaar

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
drogue-bazaar-actix/: Cargo.toml
drogue-bazaar-actix/src/: bind.rs  defaults.rs  start.rs
drogue-bazaar-application/: Cargo.toml
drogue-bazaar-application/src/: lib.rs  run.rs
drogue-bazaar-application/src/health/: mod.rs
drogue-bazaar-application/src/health/run/: mod.rs
drogue-bazaar-application/src/init/: mod.rs  tracing.rs
drogue-bazaar-core/: Cargo.toml
drogue-bazaar-core/src/: info.rs  lib.rs  spawn.rs
drogue-bazaar-core/src/metrics/: mod.rs
src/: lib.rs  macros.rs  reqwest.rs
src/actix/: bind.rs  config.rs  mod.rs  start.rs
src/actix/auth/: error.rs  mod.rs
src/actix/auth/authentication/: middleware.rs  mod.rs
src/actix/auth/authorization/: app.rs  middleware.rs  mod.rs
src/actix/http/: bind.rs  builder.rs  config.rs  cors.rs  defaults.rs  mod.rs  start.rs
src/app/: macros.rs  mod.rs  run.rs
src/app/health/: mod.rs
src/app/health/run/: actix.rs  mod.rs
src/app/init/: mod.rs  tracing.rs
src/app/run/: main.rs  mod.rs
src/auth/: authz.rs  mod.rs  user.rs
src/auth/openid/: authenticator.rs  config.rs  error.rs  mod.rs
src/auth/pat/: mod.rs
src/client/: mod.rs
src/core/: default.rs  info.rs  mod.rs  spawn.rs
src/core/config/: mod.rs
src/core/tls/: auth.rs  mod.rs  mode.rs
src/db/: mod.rs
src/db/postgres/: mod.rs
src/health/: mod.rs
src/udp/: mod.rs
