[package]
name = "drogue-bazaar"
version = "0.2.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "A place to find tools for building your Rust application"
repository = "https://github.com/drogue-iot/drogue-bazaar"
homepage = "https://drogue.io"
categories = ["rust-patterns"]
keywords = ["Service", "Runtime", "Plumbing"]
readme = "README.md"

edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-http = "3"
actix-service = "2"
actix-web = "4"
actix-web-extras = "0.1"
actix-web-httpauth = "0.8"
actix-web-prom = "0.6"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
config = "0.13"
dotenv = "0.15"
thiserror = "1"
drogue-client = "0.11"
env_logger = "0.9"
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
humantime = "2"
humantime-serde = "1"
log = "0.4"
openid = "0.10"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
pem = "1"
prometheus = "0.13"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-actix-web = { version = "0.6", features = ["opentelemetry_0_17"] }
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

drogue-bazaar-core = { path = "./drogue-bazaar-core", version = "0.2" }
native-tls = { version = "0.2", optional = true }

[patch.crates-io]
actix-web = { git = "https://github.com/ctron/actix-web", rev = "f3f41a0cc70e43564f8243b3ff425195566b5f16" } # FIXME: awaiting release 4.2.0
actix-http = { git = "https://github.com/ctron/actix-web", rev = "f3f41a0cc70e43564f8243b3ff425195566b5f16" } # FIXME: awaiting release 4.2.0
#drogue-client = { git = "https://github.com/drogue-iot/drogue-client", rev = "0cb6998da75905240f06f38a44aac31d7b3fdde5" } # FIXME: awaiting release 0.11.0
drogue-client = { path = "../drogue-client" }
drogue-bazaar-core = { path = "./drogue-bazaar-core" }

[features]
default = ["default-tls"]

default-tls = ["reqwest/default-tls"]
native-tls = ["dep:native-tls", "reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]