[package]
name = "drogue-bazaar"
version = "0.2.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "A place to find tools for building your Rust application"
repository = "https://github.com/drogue-iot/drogue-bazaar"
homepage = "https://drogue.io"
categories = ["rust-patterns"]
keywords = ["Service", "Runtime", "Plumbing"]
readme = "README.md"

edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
config = "0.13"
dotenv = "0.15"
drogue-client = "0.11"
env_logger = "0.9"
futures-core = "0.3"
futures-util = "0.3"
http = "0.2"
humantime = "2"
humantime-serde = "1"
log = "0.4"
openid = "0.10"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
pem = "1"
prometheus = "0.13"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

native-tls = { version = "0.2", optional = true }

# actix dependencies
actix-cors = { version = "0.6", optional = true }
actix-http = { version = "3", optional = true }
actix-service = { version = "2", optional = true }
actix-web = { version = "4", optional = true }
actix-web-extras = { version = "0.1", optional = true }
actix-web-httpauth = { version = "0.8", optional = true }
actix-web-prom = { version = "0.6", optional = true }
tracing-actix-web = { version = "0.6", features = ["opentelemetry_0_17"], optional = true }

[patch.crates-io]
actix-web = { git = "https://github.com/ctron/actix-web", rev = "f3f41a0cc70e43564f8243b3ff425195566b5f16" } # FIXME: awaiting release 4.2.0
actix-http = { git = "https://github.com/ctron/actix-web", rev = "f3f41a0cc70e43564f8243b3ff425195566b5f16" } # FIXME: awaiting release 4.2.0
drogue-client = { git = "https://github.com/drogue-iot/drogue-client", rev = "c6ade2e91754778db13175535a0aa8d6198f58fc" } # FIXME: awaiting release 0.11.0
#drogue-client = { path = "../drogue-client" }

[features]
default = ["default-tls", "actix"]

actix = [
    "actix-cors",
    "actix-http",
    "actix-service",
    "actix-web",
    "actix-web-extras",
    "actix-web-httpauth",
    "actix-web-prom",
    "tracing-actix-web"
]

default-tls = ["reqwest/default-tls"]
native-tls = ["dep:native-tls", "reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true