[package]
name = "drogue-bazaar-core"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-core = "0.3"
futures-util = "0.3"
log = { version = "0.4", default-features = false }

config = { version = "0.13", optional = true }
serde = { version = "1", optional = true }
native-tls = { version = "0.2", optional = true }

[features]
default = ["std", "alloc"]

std = ["log/std"]
alloc = []
